added basic event system

--- a/Phoenix/Phoenix.vcxproj.filters
+++ b/Phoenix/Phoenix.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Phoenix">
       <UniqueIdentifier>{40FF9C0C-ACDE-1BA8-B5F6-A67E21558209}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Phoenix\Events">
+      <UniqueIdentifier>{240313B4-10D1-06BA-F964-77E0E5D1E21E}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Phoenix.h" />
@@ -15,6 +18,18 @@
     </ClInclude>
     <ClInclude Include="src\Phoenix\EntryPoint.h">
       <Filter>Phoenix</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Phoenix\Events\ApplicationEvent.h">
+      <Filter>Phoenix\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Phoenix\Events\Event.h">
+      <Filter>Phoenix\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Phoenix\Events\KeyEvent.h">
+      <Filter>Phoenix\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Phoenix\Events\MouseEvent.h">
+      <Filter>Phoenix\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Phoenix\Log.h">
       <Filter>Phoenix</Filter>
