--- a/Phoenix/Phoenix.vcxproj.filters
+++ b/Phoenix/Phoenix.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="src\Phoenix\Log.h">
       <Filter>Phoenix</Filter>
     </ClInclude>
+    <ClInclude Include="src\pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Phoenix\Application.cpp">
@@ -42,5 +43,6 @@
     <ClCompile Include="src\Phoenix\Log.cpp">
       <Filter>Phoenix</Filter>
     </ClCompile>
+    <ClCompile Include="src\pch.cpp" />
   </ItemGroup>
 </Project>
