--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Phoenix/lib/spdlog"]
 	path = Phoenix/lib/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Phoenix/lib/glfw"]
+	path = Phoenix/lib/glfw
+	url = https://github.com/glfw/glfw
