--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/gabime/spdlog
 [submodule "Phoenix/lib/glfw"]
 	path = Phoenix/lib/glfw
-	url = https://github.com/glfw/glfw
+	url = https://github.com/TheCherno/glfw
