--- a/Phoenix/Phoenix.vcxproj.filters
+++ b/Phoenix/Phoenix.vcxproj.filters
@@ -37,6 +37,12 @@
     <ClInclude Include="src\Phoenix\Events\MouseEvent.h">
       <Filter>Phoenix\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Phoenix\Layer.h">
+      <Filter>Phoenix</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Phoenix\LayerStack.h">
+      <Filter>Phoenix</Filter>
+    </ClInclude>
     <ClInclude Include="src\Phoenix\Log.h">
       <Filter>Phoenix</Filter>
     </ClInclude>
@@ -50,6 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Phoenix\Application.cpp">
+      <Filter>Phoenix</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Phoenix\Layer.cpp">
+      <Filter>Phoenix</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Phoenix\LayerStack.cpp">
       <Filter>Phoenix</Filter>
     </ClCompile>
     <ClCompile Include="src\Phoenix\Log.cpp">
