--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Phoenix/lib/glfw"]
 	path = Phoenix/lib/glfw
 	url = https://github.com/TheCherno/glfw
+[submodule "Phoenix/lib/imgui"]
+	path = Phoenix/lib/imgui
+	url = https://github.com/TheCherno/imgui
