--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,71 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=572,40
+Size=550,711
 Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=339,324
+Collapsed=0
+
+[Window][Example: Console]
+Pos=445,5
+Size=520,652
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=894,343
+Size=430,450
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=441,180
+Size=654,437
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=24,272
+Size=703,395
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=-15,179
+Size=451,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=451,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=247,48
+Collapsed=0
+
+[Window][Example: Log]
+Pos=850,172
+Size=500,400
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,19
+Size=1280,701
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=485,414
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
