--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=572,40
-Size=550,711
+Pos=765,140
+Size=417,481
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
@@ -14,19 +14,22 @@ Size=339,324
 Collapsed=0
 
 [Window][Example: Console]
-Pos=445,5
-Size=520,652
+Pos=0,38
+Size=223,480
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Example: Simple layout]
-Pos=60,60
-Size=500,440
+Pos=225,19
+Size=636,499
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Example: Property editor]
-Pos=894,343
-Size=430,450
+Pos=225,38
+Size=429,480
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Example: Auto-resizing window]
 Pos=441,180
@@ -54,9 +57,10 @@ Size=247,48
 Collapsed=0
 
 [Window][Example: Log]
-Pos=850,172
-Size=500,400
+Pos=0,38
+Size=1280,199
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -68,7 +72,21 @@ Pos=60,60
 Size=485,414
 Collapsed=0
 
+[Window][Test window]
+Pos=354,199
+Size=330,293
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
+
+[Docking][Data]
+DockSpace       ID=0x3BC79352 Pos=228,310 Size=1280,682 Split=Y
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1280,199 Selected=0xDBFE1153
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=1280,481 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=223,701 Selected=0xDE6E0C33
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1055,701 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=429,480 Selected=0xE7652686
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=624,480 CentralNode=1
 
