--- a/Phoenix/Phoenix.vcxproj
+++ b/Phoenix/Phoenix.vcxproj
@@ -576,9 +576,12 @@
     <ClInclude Include="src\Phoenix\Layer.h" />
     <ClInclude Include="src\Phoenix\LayerStack.h" />
     <ClInclude Include="src\Phoenix\Log.h" />
+    <ClInclude Include="src\Phoenix\Renderer\Buffer.h" />
     <ClInclude Include="src\Phoenix\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Phoenix\Renderer\Renderer.h" />
     <ClInclude Include="src\Phoenix\Renderer\Shader.h" />
     <ClInclude Include="src\Phoenix\Window.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -591,7 +594,10 @@
     <ClCompile Include="src\Phoenix\Layer.cpp" />
     <ClCompile Include="src\Phoenix\LayerStack.cpp" />
     <ClCompile Include="src\Phoenix\Log.cpp" />
+    <ClCompile Include="src\Phoenix\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Phoenix\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
