--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -77,6 +77,11 @@ Pos=114,45
 Size=154,125
 Collapsed=0
 
+[Window][Settings]
+Pos=58,60
+Size=319,618
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
