--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -82,6 +82,11 @@ Pos=56,39
 Size=319,618
 Collapsed=0
 
+[Window][Info]
+Pos=60,60
+Size=135,123
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
