--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=787,344
-Size=417,119
+ViewportPos=836,304
+ViewportId=0xE927CF2F
+Size=416,701
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
@@ -20,10 +21,10 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Example: Simple layout]
-Pos=225,19
-Size=636,499
+Pos=418,541
+Size=862,179
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x0000000A,0
 
 [Window][Example: Property editor]
 Pos=225,38
@@ -63,8 +64,7 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][DockSpace Demo]
-Pos=0,19
-Size=1280,701
+Size=1280,720
 Collapsed=0
 
 [Window][Example: Custom rendering]
@@ -78,25 +78,61 @@ Size=154,125
 Collapsed=0
 
 [Window][Settings]
-Pos=56,39
-Size=319,618
+Pos=0,19
+Size=352,701
 Collapsed=0
+DockId=0x0000000B,0
 
 [Window][Info]
-Pos=60,60
-Size=135,123
+Pos=0,19
+Size=162,701
 Collapsed=0
+DockId=0x00000007,0
+
+[Window][System stats]
+Pos=60,60
+Size=269,180
+Collapsed=0
+
+[Window][Fluid Simulation]
+Size=1280,720
+Collapsed=0
+
+[Window][Simulation]
+Pos=313,19
+Size=967,701
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Fluid Viewport]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Viewport]
+Pos=354,19
+Size=926,701
+Collapsed=0
+DockId=0x0000000C,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=228,310 Size=1280,682 Split=Y
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1280,199 Selected=0xDBFE1153
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=1280,481 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=223,701 Selected=0xDE6E0C33
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1055,701 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=429,480 Selected=0xE7652686
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=624,480 CentralNode=1
+DockSpace         ID=0x071E52CC Pos=105,153 Size=1280,701 Split=X
+  DockNode        ID=0x00000007 Parent=0x071E52CC SizeRef=162,701 Selected=0xE534E588
+  DockNode        ID=0x00000008 Parent=0x071E52CC SizeRef=1116,701 CentralNode=1 Selected=0xFBEA9FC2
+DockSpace         ID=0x3BC79352 Pos=169,217 Size=1280,701 Split=Y
+  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=1280,199 Selected=0xDBFE1153
+  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1280,481 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=223,701 Selected=0xDE6E0C33
+    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=1055,701 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=429,480 Selected=0xE7652686
+      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=624,480 Split=Y
+        DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=862,520 CentralNode=1
+        DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=862,179 Selected=0x08F8367F
+DockSpace         ID=0x736E8C31 Window=0xCD7D0D44 Pos=132,246 Size=1280,701 Split=X
+  DockNode        ID=0x0000000B Parent=0x736E8C31 SizeRef=352,701 Selected=0x54723243
+  DockNode        ID=0x0000000C Parent=0x736E8C31 SizeRef=926,701 CentralNode=1 Selected=0x13926F0B
 
