--- a/Phoenix/Phoenix.vcxproj.filters
+++ b/Phoenix/Phoenix.vcxproj.filters
@@ -1412,6 +1412,7 @@
     </ClInclude>
     <ClInclude Include="src\Phoenix\Renderer\Framebuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
+    <ClInclude Include="src\Phoenix\OrthographicCameraController.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\stb\stb_image.cpp">
@@ -1488,5 +1489,6 @@
     </ClCompile>
     <ClCompile Include="src\Phoenix\Renderer\Framebuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLFrameBuffer.cpp" />
+    <ClCompile Include="src\Phoenix\OrthographicCameraController.cpp" />
   </ItemGroup>
 </Project>
