--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -81,7 +81,6 @@ Collapsed=0
 Pos=0,19
 Size=352,701
 Collapsed=0
-DockId=0x0000000B,0
 
 [Window][Info]
 Pos=0,19
@@ -105,7 +104,6 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Fluid Viewport]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -113,7 +111,7 @@ Collapsed=0
 Pos=354,19
 Size=926,701
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x736E8C31,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
@@ -132,7 +130,5 @@ DockSpace         ID=0x3BC79352 Pos=169,217 Size=1280,701 Split=Y
       DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=624,480 Split=Y
         DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=862,520 CentralNode=1
         DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=862,179 Selected=0x08F8367F
-DockSpace         ID=0x736E8C31 Window=0xCD7D0D44 Pos=132,246 Size=1280,701 Split=X
-  DockNode        ID=0x0000000B Parent=0x736E8C31 SizeRef=352,701 Selected=0x54723243
-  DockNode        ID=0x0000000C Parent=0x736E8C31 SizeRef=926,701 CentralNode=1 Selected=0x13926F0B
+DockSpace         ID=0x736E8C31 Pos=41,89 Size=1280,701 CentralNode=1
 
