--- a/Phoenix/Phoenix.vcxproj
+++ b/Phoenix/Phoenix.vcxproj
@@ -564,33 +564,33 @@
     <ClInclude Include="lib\glm\glm\vector_relational.hpp" />
     <ClInclude Include="lib\stb\stb_image.h" />
     <ClInclude Include="src\Phoenix.h" />
-    <ClInclude Include="src\Phoenix\Application.h" />
-    <ClInclude Include="src\Phoenix\Core.h" />
+    <ClInclude Include="src\Phoenix\Core\Application.h" />
+    <ClInclude Include="src\Phoenix\Core\Core.h" />
+    <ClInclude Include="src\Phoenix\Core\EntryPoint.h" />
+    <ClInclude Include="src\Phoenix\Core\Input.h" />
+    <ClInclude Include="src\Phoenix\Core\KeyCodes.h" />
+    <ClInclude Include="src\Phoenix\Core\Layer.h" />
+    <ClInclude Include="src\Phoenix\Core\LayerStack.h" />
+    <ClInclude Include="src\Phoenix\Core\Log.h" />
     <ClInclude Include="src\Phoenix\Core\Timestep.h" />
-    <ClInclude Include="src\Phoenix\EntryPoint.h" />
+    <ClInclude Include="src\Phoenix\Core\Window.h" />
     <ClInclude Include="src\Phoenix\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Phoenix\Events\Event.h" />
     <ClInclude Include="src\Phoenix\Events\KeyEvent.h" />
     <ClInclude Include="src\Phoenix\Events\MouseEvent.h" />
     <ClInclude Include="src\Phoenix\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="src\Phoenix\Input.h" />
-    <ClInclude Include="src\Phoenix\KeyCodes.h" />
-    <ClInclude Include="src\Phoenix\Layer.h" />
-    <ClInclude Include="src\Phoenix\LayerStack.h" />
-    <ClInclude Include="src\Phoenix\Log.h" />
-    <ClInclude Include="src\Phoenix\OrthographicCameraController.h" />
     <ClInclude Include="src\Phoenix\Renderer\Buffer.h" />
     <ClInclude Include="src\Phoenix\Renderer\Camera.h" />
     <ClInclude Include="src\Phoenix\Renderer\Framebuffer.h" />
     <ClInclude Include="src\Phoenix\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Phoenix\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\Phoenix\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\Phoenix\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Phoenix\Renderer\Renderer.h" />
     <ClInclude Include="src\Phoenix\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Phoenix\Renderer\Shader.h" />
     <ClInclude Include="src\Phoenix\Renderer\Texture.h" />
     <ClInclude Include="src\Phoenix\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Phoenix\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
@@ -604,16 +604,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\stb\stb_image.cpp" />
-    <ClCompile Include="src\Phoenix\Application.cpp" />
+    <ClCompile Include="src\Phoenix\Core\Application.cpp" />
+    <ClCompile Include="src\Phoenix\Core\Layer.cpp" />
+    <ClCompile Include="src\Phoenix\Core\LayerStack.cpp" />
+    <ClCompile Include="src\Phoenix\Core\Log.cpp" />
     <ClCompile Include="src\Phoenix\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Phoenix\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\Phoenix\Layer.cpp" />
-    <ClCompile Include="src\Phoenix\LayerStack.cpp" />
-    <ClCompile Include="src\Phoenix\Log.cpp" />
-    <ClCompile Include="src\Phoenix\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\Framebuffer.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Phoenix\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\RendererAPI.cpp" />
